imageflow.h

// Version selection is not implemented within imageflow, instead, we let callers do that logic:
// Expose API to evaluate graph and suggest minimum source dimensions.
// Returns "indeterminate" if face or whitespace cropping is in use, or any other conditionals.

// Source/output files and I/O interfaces must be registered with the context. They can survive multiple ImageJobs.

// ImageJobs associate an opaque cache for dimensions, metadata, and (potentially) bitmap data with these I/O
// interfaces.

typedef enum flow_ntype {
    flow_ntype_Null = 0,
    flow_ntype_primitive_Flip_Vertical_Mutate = 1,
    flow_ntype_primitive_Flip_Horizontal_Mutate = 1,
    flow_ntype_primitive_Crop_Mutate_Alias = 2,
    flow_ntype_primitive_CopyRectToCanvas = 3, // Overwrite only, no compositing
    flow_ntype_Create_Canvas = 4,
    flow_ntype_primitive_RenderToCanvas1D = 5,

    flow_ntype_primitive_bitmap_bgra_pointer,
    flow_ntype_primitive_decoder,
    flow_ntype_primitive_encoder,

    flow_ntype_non_primitive_nodes_begin = 256,

    flow_ntype_Transpose,
    flow_ntype_Flip_Vertical,
    flow_ntype_Flip_Horizontal,
    flow_ntype_Render1D,
    flow_ntype_Crop,
    flow_ntype_non_optimizable_nodes_begin = 512,

    flow_ntype_Clone,
    flow_ntype_decoder,
    flow_ntype_encoder,

    flow_ntype_Rotate_90,
    flow_ntype_Rotate_180,
    flow_ntype_Rotate_270,
    flow_ntype_Scale, //(preserve colorspace), interpolation filter

    // Not implemented below here:
    flow_ntype_Rotate_Flip_Per_Orientation,
    flow_ntype_Crop_Percentage,
    flow_ntype_Crop_Percentage_Infinite_Canvas, // canvas_color
    flow_ntype_Crop_Rectangle,
    flow_ntype_Constrain, //(mode=pad|max|crop|stretch) (width, height) (scale=down|up|both|canvas) (anchor=9 points)
    flow_ntype_Matte,
    flow_ntype_EnlargeCanvas,
    flow_ntype_Sharpen,
    flow_ntype_Blur,
    flow_ntype_Convolve_Custom,
    flow_ntype_AdjustContrast,
    flow_ntype_AdjustSaturation,
    flow_ntype_AdjustBrightness,
    flow_ntype_CropWhitespace, // tolerances and padding
    flow_ntype_Opacity,
    flow_ntype_Sepia,
    flow_ntype_Grayscale, // true|y|ry|ntsc|bt709|flat
    flow_ntype_DrawImage,
    flow_ntype_RemoveNoise,
    flow_ntype_ColorMatrixsRGB,
    flow_ntype_Resource_Placeholder,
    flow_ntype__FORCE_ENUM_SIZE_INT32 = 2147483647
} flow_ntype;
typedef enum flow_edge_type {
    flow_edgetype_null,
    flow_edgetype_input,
    flow_edgetype_canvas,
    flow_edgetype_info,
    flow_edgetype_FORCE_ENUM_SIZE_INT32 = 2147483647
} flow_edge_type;
struct flow_job;
struct flow_graph {
    uint32_t memory_layout_version; // This progresses differently from the library version, as internals are subject to
    // refactoring. If we are given a graph to copy, we check this number.
    struct flow_edge* edges;
    int32_t edge_count;
    int32_t next_edge_id;
    int32_t max_edges;

    struct flow_node* nodes;
    int32_t node_count;
    int32_t next_node_id;
    int32_t max_nodes;

    uint8_t* info_bytes;
    int32_t max_info_bytes;
    int32_t next_info_byte;
    int32_t deleted_bytes;

    float growth_factor;
};
typedef enum FLOW_DIRECTION { FLOW_OUTPUT = 8, FLOW_INPUT = 4 } FLOW_DIRECTION;
struct flow_job* flow_job_create(Context* c);
void flow_job_destroy(Context* c, struct flow_job* job);
bool flow_job_configure_recording(Context* c, struct flow_job* job, bool record_graph_versions,
                                  bool record_frame_images, bool render_last_graph, bool render_graph_versions,
                                  bool render_animated_graph);
bool flow_job_insert_resources_into_graph(Context* c, struct flow_job* job, struct flow_graph** graph);
bool flow_job_populate_dimensions_where_certain(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
// For doing execution cost estimates, we force estimate, then flatten, then calculate cost
bool flow_job_force_populate_dimensions(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
bool flow_job_execute_where_certain(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
bool flow_job_graph_fully_executed(Context* c, struct flow_job* job, struct flow_graph* g);
bool flow_job_notify_graph_changed(Context* c, struct flow_job* job, struct flow_graph* g);
bool flow_job_execute(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
bool flow_graph_post_optimize_flatten(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
bool flow_graph_optimize(Context* c, struct flow_job* job, struct flow_graph** graph_ref);
bool flow_graph_pre_optimize_flatten(Context* c, struct flow_graph** graph_ref);
int32_t flow_graph_get_edge_count(Context* c, struct flow_graph* g, int32_t node_id, bool filter_by_edge_type,
                                  flow_edge_type type, bool include_inbound, bool include_outbound);
bool flow_graph_validate(Context* c, struct flow_graph* g);
int32_t flow_job_add_bitmap_bgra(Context* c, struct flow_job* job, FLOW_DIRECTION dir, int32_t graph_placeholder_id,
                                 BitmapBgra* bitmap);
int32_t flow_job_add_buffer(Context* c, struct flow_job* job, FLOW_DIRECTION dir, int32_t graph_placeholder_id,
                            void* buffer, size_t buffer_size, bool owned_by_job);
int32_t flow_node_create_generic(Context* c, struct flow_graph** graph_ref, int32_t prev_node, flow_ntype type);
bool flow_graph_print_to_dot(Context* c, struct flow_graph* g, FILE* stream, const char* image_node_filename_prefix);
BitmapBgra* flow_job_get_bitmap_bgra(Context* c, struct flow_job* job, int32_t resource_id);
struct flow_job_resource_buffer* flow_job_get_buffer(Context* c, struct flow_job* job, int32_t resource_id);
void flow_graph_print_to(Context* c, struct flow_graph* g, FILE* stream);
struct flow_job_resource_buffer {
    void* buffer;
    size_t buffer_size;
    bool owned_by_job;
    void* codec_state;
};
bool flow_node_post_optimize_flatten(Context* c, struct flow_graph** graph_ref, int32_t node_id);