wrappers/ruby/lib/imageflow/ffi.rb


		attach_function :flow_job_create, [ :pointer ], :pointer
		attach_function :flow_job_destroy, [ :pointer, :pointer ], :void
		attach_function :flow_job_configure_recording, [ :pointer, :pointer, :bool, :bool, :bool, :bool, :bool ], :bool
		attach_function :flow_job_insert_resources_into_graph, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_populate_dimensions_where_certain, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_force_populate_dimensions, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_execute_where_certain, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_graph_fully_executed, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_notify_graph_changed, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_job_execute, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_graph_post_optimize_flatten, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_graph_optimize, [ :pointer, :pointer, :pointer ], :bool
		attach_function :flow_graph_pre_optimize_flatten, [ :pointer, :pointer ], :bool
		attach_function :flow_graph_get_edge_count, [ :pointer, :pointer, :int32, :bool, :int, :bool, :bool ], :int32
		attach_function :flow_graph_validate, [ :pointer, :pointer ], :bool
		attach_function :flow_job_add_bitmap_bgra, [ :pointer, :pointer, :int, :int32, :pointer ], :int32
		attach_function :flow_job_add_buffer, [ :pointer, :pointer, :int, :int32, :pointer, :uint, :bool ], :int32
		attach_function :flow_node_create_generic, [ :pointer, :pointer, :int32, :int ], :int32
		attach_function :flow_graph_print_to_dot, [ :pointer, :pointer, :pointer, :string ], :bool
		attach_function :flow_job_get_bitmap_bgra, [ :pointer, :pointer, :int32 ], :pointer
		attach_function :flow_job_get_buffer, [ :pointer, :pointer, :int32 ], :pointer
		#attach_function :flow_graph_print_to, [ :pointer, :pointer, :pointer ], :void
		class FlowJobResourceBuffer < FFI::Struct
		layout(
		       :buffer, :pointer,
		       :buffer_size, :uint,
		       :owned_by_job, :bool,
		       :codec_state, :pointer
		)
		end
		attach_function :flow_bitmap_bgra_write_png, [ :pointer, :pointer, :pointer, :pointer ], :bool
		attach_function :flow_node_post_optimize_flatten, [ :pointer, :pointer, :int32 ], :bool
	end
end
